# TinyRender

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
example/: ColorTriangle.cpp  DisplayModel.cpp  EmptyFrame.cpp  LightAndFaceCut.cpp  ModelTexture.cpp  PerspectiveMatrix.cpp  RandomColorModel.cpp  Triangle.cpp  ViewMatrix.cpp  Wireframe.cpp  example1.cpp  example2.cpp  example3.cpp  ft_raster_example.cpp  polygon_merge_example.cpp  rasterizer_cell_example.cpp  simple_polygon_split.cpp  sw_raster_example.cpp  triangulation_example.cpp
freetype/: v_ft_raster.cpp  v_ft_raster.h
include/: AvlTree.h  Bitmap.h  Canvas.hpp  Color.h  Color.hpp  Device.h  Geometry.h  LinkedList.h  Model.h  Paint.hpp  PolygonMerge.h  RasterizerCells.h  RenderBuffer.h  SWRaster.h  TGAImage.h  TinyRender.h  Triangulation.h  stb_image_write.h
include/geometry/: Barycentric.hpp
src/: Bitmap.cpp  Canvas.cpp  Color.cpp  DDALine.cpp  DDALine.h  Geometry.cpp  Model.cpp  PolygonMerge.cpp  RasterizerCells.cpp  RenderBuffer.cpp  SWRaster.cpp  TGAImage.cpp  TinyRender.cpp  Triangulation.cpp
src/device/: BitmapDevice.cpp  BitmapDevice.h  Device.cpp
src/software/: SoftwareCanvas.cpp  SoftwareCanvas.hpp
